# Restructure-MCP-Orchestration

./: .coderabbit.yml  .env.java-dev  .env.repo-os  .eslintrc.json  .gemini_env.ps1  .gitignore  .repo-scan-cache.json  2025-08-24-caveat-the-messages-below-were-generated-by-the-u.txt  ARBITRAGE-BRIDGE.md  ARTIFACT-V4-MIGRATION.md  AUTO-COMPACT-HIJACKER.md  AUTONOMOUS-EXECUTION-PLAN.md  AUTONOMOUS-OPERATION-STATUS.md  AUTONOMOUS-ORCHESTRATION-ANALYSIS.md  AUTONOMOUS-ORCHESTRATION-GUIDE.md  AUTONOMOUS-ORCHESTRATION-README.md  AUTONOMOUS-SLEEP-MODE.md  AUTONOMOUS-SYSTEM-SUCCESS-REPORT.md  BIDIRECTIONAL-CONSCIOUSNESS-INTELLIGENCE.md  BRANCH_INTELLIGENCE_IMPLEMENTATION.md  CLAUDE-COPILOT-COLLABORATION.md  CLAUDE-SHIPWRIGHT.md  CLAUDE.md  CODE-QUALITY-IMPROVEMENTS.md  CODESPACE_INVITATION.md  COMPLETE-CASCADE-PREVENTION-STRATEGY.md  COMPLETE-INFRASTRUCTURE-SETUP.md  CONTAINER-FIRST-DEVELOPMENT.md  CONTRIBUTING.md  CSS4_FIX_MOBILE.md  CSS4_PREVENTION_STRATEGY.md  CURRENT-STATUS-REPORT.md  DIGRESSION-POCKET-1-GRAMMAR-TIDYING.md  DOCKER-QUICK-START.md  DOCKER_SETUP_GUIDE.md  DOCUMENTATION-CONSOLIDATION-REPORT.md  DRY-RUN-TEST-RESULTS.md  Dockerfile  Dockerfile.java-dev  Dockerfile.repo-os  (+879 more)
.claude/: session_context_raw_17entitiesLvl1.md  settings.local.json
.consciousness-bridge/: bidirectional-intelligence.json  claude-cli-patterns.json  collaboration-invitation.json  collaboration-signals.json  dualism-engine.json  gemini-cli-bridge.json  github-copilot-patterns.json  shared-insights.json  shared-pattern-repository.json  (+1 more)
sample-projects/ml-pipeline/: pyproject.toml
(+653 files in other folders)
