[tool.poetry]
name = "guthilda-ml-pipeline"
version = "0.1.0"
description = "Captain Guthilda's ML Pipeline"
authors = ["Captain Guthilda <guthilda@pirate.ship>"]

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.1.0"
numpy = "^1.24.0"
scikit-learn = "^1.3.0"
fastapi = "^0.104.0"
uvicorn = "^0.24.0"
pydantic = "^2.5.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.0.0"
flake8 = "^6.0.0"
mypy = "^1.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
